[gd_scene load_steps=15 format=3 uid="uid://t38cmndiqk0l"]

[ext_resource type="Script" path="res://scripts/EnemiesScript/Class_Enemy.gd" id="1_u37nd"]
[ext_resource type="Texture2D" uid="uid://nuu4hyafmtmc" path="res://addons/Tiny Swords (Update 010)/Factions/Knights/Troops/Warrior/Red/Warrior_Red.png" id="2_7yswg"]
[ext_resource type="Script" path="res://scripts/EnemiesScript/enemy_knight_action.gd" id="3_pdhal"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tnmw6"]
radius = 13.7261
height = 29.39

[sub_resource type="CircleShape2D" id="CircleShape2D_o87tq"]
radius = 19.0

[sub_resource type="Animation" id="Animation_phmwy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_20fev"]
resource_name = "enemy-attack-down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Actions")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_player"
}]
}

[sub_resource type="Animation" id="Animation_rjeec"]
resource_name = "enemy-attack-side"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Actions")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_player"
}]
}

[sub_resource type="Animation" id="Animation_i241m"]
resource_name = "enemy-attack-up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Actions")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_player"
}]
}

[sub_resource type="Animation" id="Animation_1js5h"]
resource_name = "enemy-idle"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rf8of"]
resource_name = "enemy-run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3t2o"]
_data = {
"RESET": SubResource("Animation_phmwy"),
"enemy-attack-down": SubResource("Animation_20fev"),
"enemy-attack-side": SubResource("Animation_rjeec"),
"enemy-attack-up": SubResource("Animation_i241m"),
"enemy-idle": SubResource("Animation_1js5h"),
"enemy-run": SubResource("Animation_rf8of")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2waav"]
bg_color = Color(0.160784, 0.160784, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36t5b"]
bg_color = Color(0.847059, 0.160784, 0.160784, 1)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 0
motion_mode = 1
wall_min_slide_angle = 0.0
safe_margin = 5.413
script = ExtResource("1_u37nd")

[node name="EnemyAttackArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAttackArea"]
y_sort_enabled = true
position = Vector2(-4, -33)
rotation = 1.5708
scale = Vector2(6.19259, 6.19259)
shape = SubResource("CapsuleShape2D_tnmw6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-2, -13)
scale = Vector2(1.34524, 1)
shape = SubResource("CircleShape2D_o87tq")
debug_color = Color(0, 0.151064, 0.182524, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3t2o")
}
autoplay = "enemy-run"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-3, -34)
texture = ExtResource("2_7yswg")
flip_h = true
hframes = 6
vframes = 8
frame = 1

[node name="Actions" type="Node2D" parent="."]
script = ExtResource("3_pdhal")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Actions"]
avoidance_enabled = true
avoidance_layers = 0
avoidance_mask = 0
debug_enabled = true

[node name="Timer2" type="Timer" parent="Actions"]

[node name="EnemyBar" type="ProgressBar" parent="."]
offset_left = -41.0
offset_right = 41.0
offset_bottom = 9.0
theme_override_styles/background = SubResource("StyleBoxFlat_2waav")
theme_override_styles/fill = SubResource("StyleBoxFlat_36t5b")
rounded = true
show_percentage = false

[node name="Timer1" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="Actions/Timer2" to="Actions" method="_on_timer_timeout"]
[connection signal="timeout" from="Timer1" to="." method="_on_timer_timeout"]
